--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                         <li>Odpowiedź w ciągu 24h</li>
                         <li>Pełne rekomendacje zakupowe</li>
                     </ul>
-                    <a href="#contact" class="btn">Wybierz pakiet</a>
+                    <a href="https://tally.so/r/wL668J" class="btn">Wybierz pakiet</a>
                 </div>
                 <div class="price-card">
                     <h3>Trzy produkty</h3>
@@ -536,7 +536,7 @@
                         <li>Pełne rekomendacje zakupowe</li>
                         <li>20% taniej niż zakup pojedynczy</li>
                     </ul>
-                    <a href="#contact" class="btn">Wybierz pakiet</a>
+                    <a href="https://tally.so/r/wL668J" class="btn">Wybierz pakiet</a>
                 </div>
                 <div class="price-card">
                     <h3>Pięć produktów</h3>
@@ -547,7 +547,7 @@
                         <li>Pełne rekomendacje zakupowe</li>
                         <li>20% taniej niż zakup pojedynczy</li>
                     </ul>
-                    <a href="#contact" class="btn">Wybierz pakiet</a>
+                    <a href="https://tally.so/r/wL668J" class="btn">Wybierz pakiet</a>
                 </div>
                 <div class="price-card">
                     <h3>Pełny zakres</h3>
@@ -558,7 +558,7 @@
                         <li>Pełne rekomendacje zakupowe</li>
                         <li>Najlepsza wartość za produkt</li>
                     </ul>
-                    <a href="#contact" class="btn">Wybierz pakiet</a>
+                    <a href="https://tally.so/r/wL668J" class="btn">Wybierz pakiet</a>
                 </div>
             </div>
         </div>
@@ -585,7 +585,6 @@
                     <h3>Kontakt</h3>
                     <ul>
                         <li>Email: <a href="mailto:kontakt@agdnamiare.pl">kontakt@agdnamiare.pl</a></li>
-                        <li>Telefon: <a href="tel:+48123456789">+48 123 456 789</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
